--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -47,7 +47,7 @@ The following programs and files are installed on the Windows host computer. The
 |===
 
 
-The Host Utilities support different Windows host configurations, protocols, and multipathing options. See the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported configurations.
+The Host Utilities support different Windows host configurations, protocols, and multipathing options. See the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the current list of supported configurations.
 
 == Verify your host and storage system configurations
 
