--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -25,7 +25,7 @@ You can configure NVMe over Fabrics (NVMe-oF) on initiator hosts running ESXi 7.
 
 == Features
 
-*	ESXi initiator host can run both NVMe/FC and FCP traffic through the same adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported configurations and versions.
+*	ESXi initiator host can run both NVMe/FC and FCP traffic through the same adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported configurations and versions.
 *	Beginning with ONTAP 9.9.1 P3, NVMe/FC feature is supported for ESXi 7.0 update 3.
 *	For ESXi 7.0 and later releases, HPP (high performance plugin) is the default plugin for NVMe devices.
 
