--- a/nvme_rhel_87.adoc
+++ b/nvme_rhel_87.adoc
@@ -39,7 +39,7 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .	Install RHEL 8.7 on the server. 
 
-.	After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
+.	After the installation is complete, verify that you are running the specified RHEL 8.7 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported versions.
 +
 Example:
 +
@@ -111,7 +111,7 @@ You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 --
 .Steps
 
-.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapters.
+.	Verify that you are using the supported adapter. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported adapters.
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname 
@@ -123,7 +123,7 @@ Emulex LightPulse LPe35002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 +
 
-.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported adapter driver and firmware versions.
+.	Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported adapter driver and firmware versions.
 +
 ----
 # cat /sys/class/scsi_host/host*/fwrev 
