--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -45,7 +45,7 @@ Refer to the http://mysupport.netapp.com/matrix3[NetApp Interoperability Matrix 
 
 .Steps
 
-. Install Oracle Linux 8.3 GA on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.3 GA kernel. See the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported versions.
+. Install Oracle Linux 8.3 GA on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.3 GA kernel. See the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the current list of supported versions.
 +
 
 ----
@@ -99,7 +99,7 @@ Restart the multipathd daemon by running the _systemctl restart multipathd_ comm
  
 .Steps
 
-. Verify that you are using the supported adapter. For the most current list of supported adapters, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+. Verify that you are using the supported adapter. For the current list of supported adapters, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
 +
 ----
@@ -114,7 +114,7 @@ Emulex LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 Emulex LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 ----
 
-. Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. For the most current list of supported adapter drivers and firmware versions, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+. Verify that you are using the recommended Broadcom lpfc firmware and inbox driver. For the current list of supported adapter drivers and firmware versions, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 +
 ----
 #cat /sys/class/scsi_host/host*/fwrev
