--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -17,7 +17,7 @@ summary: How to Configure NVMe/FC Host for RHEL 8.2 with ONTAP
 
 NVMe/FC is supported on ONTAP 9.6 or later for Red Hat Enterprise Linux (RHEL) 8.2. The RHEL 8.2 host runs both NVMe and SCSI traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. 
 
-See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported configurations.
+See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the current list of supported configurations.
 
 == Features
 
@@ -54,7 +54,7 @@ include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
 4.18.0-193.el8.x86_64
 ----
 +
-See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported versions.
+See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the current list of supported versions.
 
 . Install the nvme-cli package.
 +
