--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -36,7 +36,7 @@ In-kernel NVMe multipath is already enabled by default on SUSE Linux Enterprise 
 
 Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for accurate details regarding supported configurations.
 
-. Verify that you have the requisite kernel & nvme-cli MU packages installed on the SUSE Linux Enterprise Server 15 SP3 MU host.
+. Verify that you have the requisite kernel and nvme-cli MU packages installed on the SUSE Linux Enterprise Server 15 SP3 MU host.
 +
 Example:
 +
