--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -1,6 +1,6 @@
-=== All SAN Array configurations
+=== Set up All SAN Array configurations
 
-In All SAN Array (ASA) configurations, all paths to a given LUN are active and optimized. This improves performance by serving I/O operations through all paths at the same time.
+In ASA configurations, all paths to a given LUN are active and optimized. This improves performance by serving I/O operations through all paths at the same time.
 
 .Example
-The following example displays the correct output for an ONTAP LUN:
+The following example displays the correct output for an ONTAP LUN.
