--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -4,3 +4,5 @@ In ASA configurations, all paths to a given LUN are active and optimized. This i
 
 .Example
 The following example displays the correct output for an ONTAP LUN.
+
+//ONTAPDOC-2578 9-Dec-2024
