--- a/_include/hu/reuse_hu_non_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_non_asa_configuration.adoc
@@ -4,3 +4,5 @@ For non-ASA configurations, there should be two groups of paths with different p
 
 .Example
 The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths.
+
+//ONTAPDOC-2578 9-Dec-2024
