--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -3,6 +3,7 @@ The `multipath.conf` file must exist for the multipath daemon to start. If this 
 The first time you create the `multipath.conf` file, you might need to enable and start the multipath services by using the following commands:
 
 `chkconfig multipathd on`
+
 `/etc/init.d/multipathd start`
 
 You don't need to add anything directly to the `multipath.conf` file unless you have devices that you don't want multipath to manage or you have existing settings that override defaults. To exclude unwanted devices, add the following syntax to the `multipath.conf` file, replacing <DevId> with the WWID string of the device you want to exclude:
@@ -44,3 +45,4 @@ You should always check your `/etc/multipath.conf` file, especially in the defau
 
 The following table demonstrates the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they must be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. Without this correction, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp, the OS vendor, or both, and only when the impact is fully understood.
 
+//ONTAPDOC-2578 9-Dec-2024
