completed language improvements

--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -25,12 +25,14 @@ The following example determines the WWID of a device and adds it to the `multip
 +
 ----
 /lib/udev/scsi_id -gud /dev/sda
+
 360030057024d0730239134810c0cb833
 ----
 +
 `sda` is the local SCSI disk that you want to add to the blacklist.
 
 . Add the `WWID` to the blacklist stanza in `/etc/multipath.conf`:
+[source,cli]
 +
 ----
 blacklist {
