--- a/_include/nvme/reuse-nvme-introduction.adoc
+++ b/_include/nvme/reuse-nvme-introduction.adoc
@@ -1,1 +1,1 @@
-You can use NVMe-oF with ONTAP LUNs. In NVMe-oF environments, ANA is equivalent to ALUA multipathing in iSCSI and FCP environments; it is implemented with the in-kernel NVMe multipath feature.
+You can use NVMe-oF with ONTAP LUNs. In NVMe-oF environments, ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments; it is implemented with the in-kernel NVMe multipath feature.
