--- a/hu_rhel_95.adoc
+++ b/hu_rhel_95.adoc
@@ -29,7 +29,7 @@ In the following example, the `sanlun lun show` command returns LUN information.
 ----
 sanlun lun show all
 ----
-.Show example output
+.Show example
 [%collapsible%]
 ====
 ----
@@ -61,7 +61,7 @@ NOTE: A single LUN shouldn't require more than four paths. More than four paths 
 
 include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
-.Show example output
+.Show example
 [%collapsible%]
 ====
 ----
@@ -78,7 +78,7 @@ size=180G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
-.Show example output
+.Show example
 [%collapsible%]
 ====
 ----
@@ -117,7 +117,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 | path_selector | "service-time 0"
 | polling_interval | 5
 | prio | "ontap"
-| product | LUN.*
+| product | LUN
 | retain_attached_hw_handler | yes
 | rr_weight | "uniform"
 | user_friendly_names | no
@@ -128,7 +128,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If other SAN arrays are still attached to the host, correct these parameters specifically for ONTAP LUNs by using a device stanza.
 
-.Show example output
+.Show example
 [%collapsible%]
 ====
 ----
@@ -139,8 +139,8 @@ defaults {
 
 devices {
    device {
-      vendor         "NETAPP  "
-      product         "LUN.*"
+      vendor         "NETAPP"
+      product         "LUN"
       no_path_retry    queue
       path_checker     tur
    }
