--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -771,7 +771,7 @@ To generate the JSON file, you can use the `-o` option. See the NVMe connect-all
 .Steps
 . Configure the JSON file:
 +
-.Show example output
+.Show example
 [%collapsible]
 ====
 ----
