--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -210,7 +210,7 @@ FCP CMPL: xb 000014a5 Err 0002149a
 
 --
 
-.Marvell/QLogic FC Adapter for NVMe/FC
+.Marvell/QLogic
 --
 
 The native inbox qla2xxx driver included in the RHEL 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
