--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -213,7 +213,9 @@ FCP CMPL: xb 000014a5 Err 0002149a
 .Marvell/QLogic
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+Configure NVMe/FC for a Marvell/QLogic adapter.
+
+NOTE: The native inbox qla2xxx driver included in the RHEL 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
