--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -19,7 +19,7 @@ include::_include/nvme/reuse-nvme-introduction.adoc[]
 == About this task 
 You can use the following support and features with the NVMe-oF host configuration for RHEL 9.5. You should also review the known limitations before starting the configuration process.
 
-* The following support is available for the NVMe-oF host configuration for RHEL 9.5 with ONTAP:
+* Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
 +
