--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -17,7 +17,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 include::_include/nvme/reuse-nvme-introduction.adoc[]
 
 == About this task 
-You can use the following support and features with the NVMe-oF host configuration for RHEL 9.5. You should also review the known limitations before starting the configuration process.
+You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 9.5. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
