--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -157,7 +157,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
 
-. Verify that the initiator ports are up and running and that you can see the target logical interfaces (LIFs):
+. Verify that you can view your initiator ports:
 
 .. `cat /sys/class/fc_host/host*/port_name`
 +
